Task AB#60: Fixed build error

--- a/sources/azure-pipelines/apps.admin.cross.android.yml
+++ b/sources/azure-pipelines/apps.admin.cross.android.yml
@@ -16,7 +16,8 @@ pr:
     - feature/*/*
     - epic/*/*
   paths:
-    include: sources/*
+    include: 
+    - sources/*
     exclude:
     - \*/*.md'
     - \*/*.md
