Task AB#60: Replaced unallowed char with allowed character

--- a/sources/azure-pipelines/apps.admin.cross.android.yml
+++ b/sources/azure-pipelines/apps.admin.cross.android.yml
@@ -31,7 +31,7 @@ variables:
   outputDirectory: '$(build.binariesDirectory)/$(buildConfiguration)'
   appClass: 'Admin'
   appTargetPlatform: 'Android'
-  jobName: 'X-Plat apps for $(appClass)s'
+  jobName: 'X_Plat apps for $(appClass)s'
   jobDisplayName: 'Integrate $(appTargetPlatform) $(appClass) App'
 
 stages:
