Task AB#60: Removed spaces to simplify job name

--- a/sources/azure-pipelines/apps.admin.cross.android.yml
+++ b/sources/azure-pipelines/apps.admin.cross.android.yml
@@ -31,7 +31,7 @@ variables:
   outputDirectory: '$(build.binariesDirectory)/$(buildConfiguration)'
   appClass: 'Admin'
   appTargetPlatform: 'Android'
-  jobName: "X_Plat apps for $(appClass)"
+  jobName: "XPlat_$(appClass)"
   jobDisplayName: "Integrate $(appTargetPlatform) $(appClass) App"
 
 stages:
