Task AB#60: Replaced template expression with runtime expression

--- a/sources/azure-pipelines/apps.admin.cross.android.yml
+++ b/sources/azure-pipelines/apps.admin.cross.android.yml
@@ -31,6 +31,8 @@ variables:
   outputDirectory: '$(build.binariesDirectory)/$(buildConfiguration)'
   appClass: 'Admin'
   appTargetPlatform: 'Android'
+  jobName: "XPlat_$[variables.appClass]"
+  jobDisplayName: "Integrate $[variables.appTargetPlatform] $[variables.appClass] App"
 
 stages:
 - stage: 'nightly_builds'
@@ -41,8 +43,6 @@ stages:
       displayName: '$(jobDisplayName)'
       variables:
         buildConfiguration: 'Debug'
-        jobName: "XPlat_${{appClass}}"
-        jobDisplayName: "Integrate ${{appTargetPlatform}} ${{appClass}} App"
       pool:
         vmImage: 'windows-latest'
       steps:
@@ -68,8 +68,6 @@ stages:
     displayName: '$(jobDisplayName)'
     variables:
       buildConfiguration: 'Debug'
-      jobName: "XPlat_${{appClass}}"
-      jobDisplayName: "Integrate ${{appTargetPlatform}} ${{appClass}} App"
     pool:
       vmImage: 'windows-latest'
     steps:
@@ -95,8 +93,6 @@ stages:
     displayName: '$(jobDisplayName)'
     variables:
       buildConfiguration: 'Release'
-      jobName: "XPlat_${{appClass}}"
-      jobDisplayName: "Integrate ${{appTargetPlatform}} ${{appClass}} App"
     pool:
       vmImage: 'windows-latest'
     steps:
