--- a/sources/Common/SDK.Extensions/SDK.Extensions.csproj
+++ b/sources/Common/SDK.Extensions/SDK.Extensions.csproj
@@ -18,7 +18,7 @@
     <PackageReference Include="Microsoft.DependencyValidation.Analyzers" Version="0.11.0" />
   </ItemGroup>
 
-  <ItemGroup Condition="'$(IsNetStd21)'=='true' Or '$(IsNetCore31)'=='true'">
+  <ItemGroup Condition="'$(IsNetStd21)'=='true'">
     <PackageReference Include="Grpc.Net.ClientFactory" Version="2.29.0" />
     <PackageReference Include="Grpc.Net.Client.Web" Version="2.29.0" />
   </ItemGroup>
